--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,38 @@
 html {
+/*selects all the tags of the same type*/
     font-family: "Roboto", sans sans-serif;
     color: black;
     line-height: 1.4;
+    /*adjusting the line-height*/
     font-size: 110%;
+    /*to adjust the size of the font*/
     box-sizing: border-box;
 }
 
 body {
     background-color: lightsteelblue;
+    /*how to change the background color*/
     color: black;
+    /*this is an example of how to set a color to text*/
     padding: 0 2em
 }
 
 h1,h2,h3 {
     font-family: sans-serif;
     margin-bottom: 0;
+    /*the space around an element that seperates it from other elements*/
 }
 
 img {
     width: 50%;
     padding: .5em;
+    /*often used to give the content some breathing room*/
 }
 .wrapper {
     font-weight: bold;
+    /*sets how thick or thin characters in text should be displayed*/
     text-transform: capitalize;
+    /*changes the capitalization such as uppercase, lowercase, and capitalize*/
 }
 nav ul {
     list-style-type: none;
@@ -32,6 +41,7 @@ nav ul {
 
 nav {
     text-align: left;
+    /*if applied to the parent element, the inline elements and the text inside them will be centered*/
 }
 
 nav ul li {
@@ -46,13 +56,16 @@ nav a:link {
 }
 
 nav a:link, ul a:visited {
+    /*visited changes the look of the link after you click on it*/
     background-color: lightcoral;
     color: white;
     border: 2px solid 8px;
     text-decoration: none; 
+    /*specifies the decoration added to text*/
 }
 
 nav a:hover, ul a:focus {
+    /*hover changes the look of the link, button, etc when the mouse hovers over it*/
     background-color: white;
     color: black;
     border: 2px solid black;
@@ -60,5 +73,6 @@ nav a:hover, ul a:focus {
 
 footer {
     background-color: rgba(0,0,0,.25);
-  text-shadow: .5px 1px rgba(0,0,0,.8);
+    text-shadow: .5px 1px rgba(0,0,0,.8);
+    /*adding a shadow to the text*/
 }
